--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/tailwind.png" alt="bootstrap skill" class="tech-stack-logo" />
+              <img src="https://icon.icepanel.io/Technology/svg/Tailwind-CSS.svg" alt="bootstrap skill" class="tech-stack-logo" />
               <span class="tooltip">TAILWIND</span>
             </li>
 
